--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,4 +17,7 @@ dependencies = [
     "flask-migrate>=4.0.7",
     "requests>=2.32.3",
     "sqlalchemy>=2.0.36",
+    "speechrecognition>=3.11.0",
+    "pydub>=0.25.1",
+    "python-docx>=1.1.2",
 ]
